--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -9,6 +9,7 @@
     <header class="main-header">
       <h1>📘 The Code Magazine</h1>
       <nav>
+        <strong>This ist the navigation</strong>
         <a href="blog.html">Blog</a>
         <a href="#">Challenges</a>
         <a href="#">Flexbox</a>
@@ -133,7 +134,9 @@
     </aside>
 
     <footer>
-      <p id="copyright">Copyright &copy; 2027 by The Code Magazine.</p>
+      <p id="copyright" class="copyright text">
+        Copyright &copy; 2027 by The Code Magazine.
+      </p>
     </footer>
   </body>
 </html>
